--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -1,14 +1,13 @@
 plugins {
     id 'com.android.application'
-    //id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.unina.natour"
+        applicationId "com.example.natourkt"
         minSdk 24
         targetSdk 31
         versionCode 1
@@ -24,40 +23,20 @@ android {
         }
     }
     compileOptions {
-        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildFeatures {
-        viewBinding true
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
 dependencies {
+
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.annotation:annotation:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    // Amplify core dependency
-    implementation 'com.amplifyframework:core:1.31.1'
-
-    // Support for Java 8 features
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-
-    // Cognito
-    implementation 'com.amplifyframework:aws-auth-cognito:1.31.1'
-
-    // Hilt
-    implementation "com.google.dagger:hilt-android:2.38.1"
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
-    annotationProcessor "com.google.dagger:hilt-compiler:2.38.1"
 }
