Lambda post confirmation Aggiunta UUID alla tabella User del DB

--- a/client/amplify/backend/backend-config.json
+++ b/client/amplify/backend/backend-config.json
@@ -1,7 +1,24 @@
 {
   "auth": {
     "natourd60c9a65": {
-      "dependsOn": []
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "natourd60c9a65PostConfirmation",
+          "triggerProvider": "Cognito",
+          "attributes": [
+            "Arn",
+            "Name"
+          ]
+        }
+      ]
+    }
+  },
+  "function": {
+    "natourd60c9a65PostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
