--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -51,4 +53,9 @@ dependencies {
 
     // Amplify - Cognito
     implementation 'com.amplifyframework:aws-auth-cognito:1.31.3'
+    implementation 'com.amplifyframework:core-kotlin:0.15.3'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
 }
