--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
+    implementation "dev.chrisbanes.insetter:insetter:0.6.1"
 }
