--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
     <application
         android:name=".NatourApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_natour_logo_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_natour_logo_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.NaTour.Starting">
 
