--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -76,4 +76,8 @@ dependencies {
     // Retrofit + GSON
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // Buttons
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation 'com.facebook.android:facebook-login:12.3.0'
 }
