--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -77,7 +77,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    // Buttons
-    implementation 'com.google.android.gms:play-services-auth:20.1.0'
-    implementation 'com.facebook.android:facebook-login:12.3.0'
+    // Slider images
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 }
