--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -79,4 +79,8 @@ dependencies {
 
     // Slider images
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
