--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -83,4 +83,8 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+
+    // Pagination
+    def paging_version = "3.1.0"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
