--- a/client/.gitignore
+++ b/client/.gitignore
@@ -33,7 +33,7 @@ google-services.json
 
 #amplify-do-not-edit-begin
 amplify/#current-cloud-backend
-amplify/.config/local-
+amplify/.config/local-*
 amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
