--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -89,6 +89,6 @@ dependencies {
     def paging_version = "3.1.0"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
-    // ViewPager2
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
