--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -106,4 +106,6 @@ dependencies {
     // Maps
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.libraries.places:places:2.5.0'
+
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
 }
