Revert commit precedente per esposizione erronea API e migliorie lato codice Possibile disegnare i percorsi

--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
 
     // Maps
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.libraries.places:places:2.5.0'
 
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
