Selezione foto in aggiunta itinerario

--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -41,6 +41,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
@@ -108,4 +109,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.libraries.places:places:2.5.0'
+
+    // Photo picker
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.8'
 }
