--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -112,4 +112,6 @@ dependencies {
 
     // Photo picker
     implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.8'
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 }
