--- a/client/amplify/backend/backend-config.json
+++ b/client/amplify/backend/backend-config.json
@@ -20,5 +20,12 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     }
+  },
+  "storage": {
+    "s3natour": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
