--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     // Amplify - Cognito
     implementation 'com.amplifyframework:aws-auth-cognito:1.31.3'
     implementation 'com.amplifyframework:core-kotlin:0.15.3'
+    implementation 'com.amplifyframework:aws-storage-s3:1.32.0'
 
     // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
