--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'kotlin-parcelize'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+
+    id "kotlinx-serialization"
 }
 
 
@@ -55,6 +57,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
@@ -66,7 +69,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
 
     // Amplify - Cognito
     implementation 'com.amplifyframework:aws-auth-cognito:1.31.3'
@@ -91,6 +95,12 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation 'org.hildan.krossbow:krossbow-websocket-okhttp:3.1.1'
+    implementation 'org.hildan.krossbow:krossbow-stomp-core:3.1.1'
+    implementation 'org.hildan.krossbow:krossbow-stomp-kxserialization:3.1.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2'
+
     // Slider images
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
 
@@ -99,7 +109,7 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.13.0'
 
     // Pagination
-    def paging_version = "3.1.0"
+    def paging_version = "3.1.1"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
     // Shimmer animation
