--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name="com.unina.natourkt.core.presentation.main.MainActivity"
             android:exported="true"
+            android:theme="@style/Theme.NaTour.Starting"
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
