--- a/client/build.gradle
+++ b/client/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.6.10'
 
     repositories {
+        google()
         mavenCentral()
     }
 
@@ -13,6 +14,8 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
+
+        classpath 'com.google.firebase:perf-plugin:1.4.1'  // Performance Monitoring plugin
     }
 }
 
@@ -21,7 +24,6 @@ plugins {
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
 
-//    id 'org.jetbrains.kotlin.multiplatform' version '1.6.10'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.10'
 }
 
