--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -57,6 +57,10 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -64,7 +68,7 @@ dependencies {
     // Base
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0-alpha03'
+    implementation 'com.google.android.material:material:1.6.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
@@ -76,6 +80,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.2.0'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -97,7 +104,7 @@ dependencies {
     implementation "dev.chrisbanes.insetter:insetter:0.6.1"
 
     // Splash screen
-    implementation 'androidx.core:core-splashscreen:1.0.0-beta01'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
@@ -136,8 +143,6 @@ dependencies {
 
     // Photo picker
     implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.8'
-    def lottieVersion = "3.4.0"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Desugaring helps with older APIs
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
