--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:name="com.unina.natourkt.core.presentation.main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.NaTour.Starting"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
 
